Added clear all data button for easy data reset

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <button id="export-btn">Export Data (JSON)</button>
         <button id="import-btn">Import Data (JSON)</button>
         <input type="file" id="import-file" accept=".json" style="display:none;">
+        <button id="clear-all-btn" style="background-color: #e74c3c; margin-top: 1rem;">Clear All Data</button>
     </div>
     <!-- You can add more currency and conversion rate inputs here -->
 </section>
