--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <span class="error-message" id="description-error"></span>
 
         <label for="amount">Amount</label>
-        <input type="number" id="amount" name="amount" required>
+        <input type="number" id="amount" name="amount" step="0.01" required>
         <span class="error-message" id="amount-error"></span>
 
         <label for="category">Category</label>
